sex by birth number validation

--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -226,17 +226,35 @@
 										<rows style="background: white;" >
 											<row>
 												<cell>
-													<hbox style="margin-top: 10px;" hflex="1">
-														<hlayout width="150px">
-															<checkbox checked="@bind(fx.courseParticipant.contact.czechCitizenship)" />
-															<label value="${c:l('txt.ui.common.CzechCitizen')}"/>
+<!-- 													<hbox style="margin-top: 10px;" hflex="1"> -->
+<!-- 														<hlayout width="150px"> -->
+<!-- 															<checkbox checked="@bind(fx.courseParticipant.contact.czechCitizenship)" /> -->
+<!-- 															<label value="${c:l('txt.ui.common.CzechCitizen')}"/> -->
+<!-- 														</hlayout> -->
+<!-- 														<hlayout width="150px"> -->
+<!-- 															<radiogroup id="sexRadioGroup" selectedItem="@bind(fx.courseParticipant.contact.sexMale)" /> -->
+<!-- 															<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" /> -->
+<!-- 			                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/> -->
+<!-- 														</hlayout> -->
+<!-- 													</hbox> -->													
+													<vlayout style="margin-top: 10px;" width="300px" height="46px">
+														<hlayout hflex="1">
+															<hlayout width="150px">
+																<checkbox checked="@bind(fx.courseParticipant.contact.czechCitizenship)" />
+																<label value="${c:l('txt.ui.common.CzechCitizen')}"/>
+															</hlayout>
+															<hlayout width="150px">
+																<radiogroup id="sexRadioGroup" selectedItem="@bind(fx.courseParticipant.contact.sexMale) @validator(vm.sexMaleValidator, validateBirthNumber=fx.courseParticipant.contact.czechCitizenship, birthNumber=fx.courseParticipant.personalNo)"  />
+																<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" />
+				                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/>
+															</hlayout>
 														</hlayout>
-														<hlayout width="150px">
-															<radiogroup id="sexRadioGroup" selectedItem="@bind(fx.courseParticipant.contact.sexMale)" />
-															<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" />
-			                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/>
-														</hlayout>
-													</hbox>
+				              							<hbox width="300px" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[sexRadioGroup])" >
+																<label value="@bind(vmsgs[sexRadioGroup])" />
+															</span>
+														</hbox>										
+													</vlayout>
 												</cell>
 											</row>
 											<row>
