course appliacation remove useless label

--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -68,7 +68,7 @@
 										<!-- Email/Username jmeno -->
 										<vbox hflex="1">
 											<hlayout hflex="1">
-												<label value="${c:l('txt.ui.common.email')} / ${c:l('txt.ui.common.Username')}"/>
+												<label value="${c:l('txt.ui.common.email')}"/>
 											</hlayout>
 											<hbox hflex="1">
 												<textbox id="representativeEmail1" readonly="@load(vm.itemReadOnly or !vm.editMode)"
@@ -93,7 +93,7 @@
 									<cell>
 										<!-- Email/Uzivatelske jmeno zopakovani -->
 										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.enterAgain')} ${c:l('txt.ui.common.email')} / ${c:l('txt.ui.common.Username')}"/>
+											<label value="${c:l('txt.ui.common.enterAgain')} ${c:l('txt.ui.common.email')}"/>
 											<hbox hflex="1">
 												<textbox id="representativeEmailRepeat" 
 													value="@bind(vm.emailUsernameRepeat) @save(vm.emailUsernameRepeat, before={submitCmd}) @validator(vm.equalValueValidator, compareTo=representativeEmail1.value)"
