--- a/scb-ui-zk/src/main/resources/prihlaska_report.jrxml
+++ b/scb-ui-zk/src/main/resources/prihlaska_report.jrxml
@@ -24,6 +24,7 @@
 	<parameter name="healthInfo" class="java.lang.String"/>
 	<parameter name="healthAgreement" class="java.lang.String"/>
 	<parameter name="persDataProcessAgreement" class="java.lang.String"/>
+	<parameter name="courseInfo" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -208,14 +209,14 @@
 				<textFieldExpression><![CDATA[$P{representativeEmail2}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="377" width="229" height="20" uuid="9588d3c3-fe63-4be3-9251-f1114d68704d"/>
+				<reportElement x="0" y="408" width="269" height="20" uuid="9588d3c3-fe63-4be3-9251-f1114d68704d"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="8" isBold="true" pdfFontName="Helvetica-Bold" pdfEncoding="Cp1250"/>
 				</textElement>
 				<text><![CDATA[Údaje o zdravotní způsobilosti, popř. zdravotních obtížích]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="397" width="555" height="47" uuid="7d56db2b-83a7-4a63-b801-9e9f03695646"/>
+				<reportElement x="0" y="430" width="555" height="47" uuid="7d56db2b-83a7-4a63-b801-9e9f03695646"/>
 				<textElement>
 					<font size="8" pdfEncoding="Cp1250"/>
 				</textElement>
@@ -240,7 +241,7 @@
 				<text><![CDATA[Účastník (dítě)]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="450" width="555" height="44" uuid="806614ff-a402-4982-bda4-cf3601ad29ab"/>
+				<reportElement x="0" y="479" width="555" height="44" uuid="806614ff-a402-4982-bda4-cf3601ad29ab"/>
 				<textElement verticalAlignment="Middle">
 					<font size="8" pdfEncoding="Cp1250"/>
 					<paragraph lineSpacingSize="0.0"/>
@@ -248,12 +249,20 @@
 				<textFieldExpression><![CDATA[$P{healthAgreement}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="501" width="555" height="48" uuid="aea7a6f4-5601-4c37-864c-fa0f1cdac709"/>
+				<reportElement x="0" y="523" width="555" height="48" uuid="aea7a6f4-5601-4c37-864c-fa0f1cdac709"/>
 				<textElement verticalAlignment="Middle">
 					<font size="8" pdfEncoding="Cp1250"/>
 					<paragraph lineSpacingSize="0.0"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{persDataProcessAgreement}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="366" width="555" height="29" uuid="89d2b9ed-3c42-4f33-abe3-134c0d71d970"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" pdfEncoding="Cp1250"/>
+					<paragraph lineSpacingSize="0.0"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{courseInfo}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
